# pypet

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  IDEAS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  opencode.yml  release.yml
.serena/: project.yml
.serena/memories/: pypet_project_structure_analysis.md
openspec/changes/2026-04-24-add-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/2026-04-24-add-mcp-server/specs/mcp-server/: spec.md
openspec/changes/add-ai-snippet-generation/: tasks.md
openspec/changes/archive/2026-02-28-improve-parametrized-snippets/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-28-improve-parametrized-snippets/specs/cli-user-experience/: spec.md
openspec/changes/archive/2026-03-28-add-ai-snippet-generation/: design.md  proposal.md  tasks.md
openspec/specs/ai-snippet-generation/: spec.md
pypet/: __init__.py  ai.py  alias_manager.py  cli.py  cli_parameters.py  config.py  migration.py  models.py  parameters.py  storage.py  sync.py
pypet/cli/: __init__.py  ai_commands.py  alias_commands.py  execution_commands.py  migration_commands.py  save_commands.py  snippet_commands.py
scripts/: install-hooks.sh  release.sh  setup-completion.sh
tests/: test_ai.py  test_ai_cli.py  test_alias.py  test_alias_cli.py  test_cli.py  test_cli_parameters.py  test_config.py  test_migration.py  test_models.py  test_parameter_integration.py  test_parameters.py  test_storage.py  test_sync_cli.py
(+5 files in other folders)
